# mopipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint-test-pr-dev.yml  pre-release.yml  test-build-publish.yml
_docs/: build.novella
_docs/_site/: 404.html
_docs/_site/api/: index.html
_docs/content/: api.md  collator.md  datastructs.md  experiment.md  index.md  io.md  other.md  pipeline.md  qtm.md  reader.md  seg.md  segment.md  segmenttypes.md
docs/: 404.html  build.novella  index.html  mkdocs.yml
docs/_site/: index.html
docs/api/: index.html
docs/collator/: index.html
docs/datastructs/: index.html
docs/experiment/: index.html
docs/io/: index.html
docs/other/: index.html
docs/pipeline/: index.html
docs/qtm/: index.html
docs/reader/: index.html
docs/seg/: index.html
docs/segment/: index.html
docs/segmenttypes/: index.html
examples/: basic_mocap_analysis.py  rqa_analysis.py
src/mopipe/: __about__.py  segment.py  segments.py
src/mopipe/analysis/: pipeline.py
src/mopipe/common/: __init__.py  datastructs.py  qtm.py
src/mopipe/core/analysis/: __init__.py  pipeline.py  rqa.py
src/mopipe/core/common/: datastructs.py  qtm.py  util.py
src/mopipe/core/data/: collator.py  empirical.py  experiment.py  reader.py
src/mopipe/core/segments/: __init__.py  inputs.py  io.py  outputs.py  seg.py  segmenttypes.py
src/mopipe/data/: __init__.py  collator.py  empirical.py  experiment.py  reader.py
src/mopipe/segments/: __init__.py  inputs.py  io.py  outputs.py  seg.py  segmenttypes.py
tests/: __init__.py  test_segments.py
tests/common/: test_datastructs.py
tests/core/analysis/: test_pipeline.py  test_pipeline_caching.py
tests/core/data/: test_collator.py  test_experiment.py  test_reader.py
tests/core/segments/: test_inputs.py  test_io.py  test_outputs.py  test_seg.py
tests/data/: test_collator.py  test_empirical.py  test_experiment.py  test_reader.py
tests/fixtures/: sample_dance_no_header.tsv  sample_dance_no_tsv_options.tsv  sample_dance_with_header.tsv  sample_dance_with_header_and_events.tsv
tests/integration/: test_experiment_pipeline.py
tests/segments/: test_inputs.py  test_io.py  test_outputs.py  test_seg.py  test_segmenttypes.py
